# sequential-arc

./: LICENSE  README.md  action_config.py  action_space.py  check_solvers.py  env.py  rb_generator_factorized.py  rb_generator_joint.py  replay_buffer_factorized.pkl  replay_buffer_joint.pkl  requirements.txt
arc_env/: .gitignore  __init__.py  pyproject.toml  setup.py
arc_env/arc_env/: __init__.py  exceptions.py  py.typed
arc_env/arc_env/config/: __init__.py  action_space.py  base.py  environment.py  solver.py  validation.py
arc_env/arc_env/core/: __init__.py  base_action_space.py  base_env.py  base_observation_space.py  protocols.py
arc_env/arc_env/data/: __init__.py
arc_env/arc_env/data/assets/: __init__.py  challenges.json
arc_env/arc_env/data/datasets/: __init__.py  arc_dataset.py  challenge_dataset.py
arc_env/arc_env/data/loaders/: __init__.py  arc_loader.py  base.py  custom_loader.py
arc_env/arc_env/data/processors/: __init__.py  augmentation.py  base.py  validation.py
arc_env/arc_env/dsl/: __init__.py
arc_env/arc_env/dsl/core/: __init__.py  base_operations.py  operation_registry.py
arc_env/arc_env/dsl/operations/: __init__.py  color.py  composition.py  selection.py  transformation.py
arc_env/arc_env/dsl/presets/: __init__.py  base.py  (+3 more)
arc_env/arc_env/environments/: __init__.py  arc_env.py
arc_env/arc_env/solvers/: __init__.py
arc_env/arc_env/spaces/: __init__.py  action_spaces.py  observation_spaces.py  space_utils.py
arc_env/arc_env/utils/: __init__.py  logging.py  performance.py  random.py  serialization.py
arc_env/docs/: __init__.py  changelog.md  index.md
arc_env/docs/api/: __init__.py  index.md
arc_env/docs/design/: __init__.py  architecture.md  index.md
arc_env/docs/tutorials/: __init__.py  getting_started.md  index.md
arc_env/examples/: __init__.py  basic_usage.py  benchmarking.py  custom_solver.py  training_example.py
arc_env/requirements/: __init__.py  base.txt  dev.txt  test.txt
arc_env/scripts/: __init__.py  check_solvers.py  data_validation.py  quick_test.py
arc_env/tests/: __init__.py  conftest.py
arc_env/tests/fixtures/: __init__.py  mock_data.py  sample_grids.py
arc_env/tests/integration/: __init__.py
arc_env/tests/unit/: __init__.py
(+94 files in other folders)
